minor design changes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h1 class="display-4 d-flex justify-content-center">Flyfishing across Wisconsin</h1>
 
 
-                    <big class="d-flex justify-content-center" style="color: rgb(10, 61, 105)"><b><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p></b>
+                    <big class="d-flex justify-content-center" style="color: rgb(232, 232, 255)"><b><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p></b>
                     </big>
                 </div>
             </section>
@@ -132,10 +132,7 @@
 </p>
                 <img src="././img/Coat_of_arms_of_Wisconsin.svg.png" class="img-responsive img-thumbnail" alt="responsive image"
                      alt-text="the flag of oregon">
-                <p>Oregon's landscape is diverse, with a windswept Pacific coastline; a volcano-studded Cascade Range;
-                    abundant bodies of water in and west of the Cascades; dense evergreen, mixed, and deciduous forests
-                    at lower elevations; and a high desert sprawling across much of its east all the way to the Great
-                    Basin.</p>
+                <p>Wisconsin.</p>
             </section>
 
             <section data-scene="end" data-background="././img/IC_Copy.jpg">
@@ -151,15 +148,13 @@
         <!--map div-->
         <div class="col-sm-6 col-md-8 storymap-map"></div>
     </div>
-
-
     <dl>
-        <dt>
-            <!--facebook icon-->
+        <!-- <dt>
+            facebook icon
             <a class="fab fa-facebook-square btn"
                href="https://facebook.com/sharer.php?u=http://geoviz.ceoas.oregonstate.edu/storymap/examples/2.5/video.html"
                target="_blank"></a>
-        </dt>
+        </dt> -->
         <dt>
             <!--facebook icon-->
             <a class="fab fa-github btn" href="https://github.com/jasparkatt/Storymaps" style="top:40px"
@@ -200,7 +195,7 @@
 
 <!-- main javascript -->
 <script type="text/javascript">
-    $(document).ready(function() {
+    
     $('#storymap').storymap({
         scenes: scenes,
         // baselayer: layers.labels,
@@ -227,7 +222,6 @@
             new L.Control.Zoom({ position: 'bottomright'}).addTo(map);
             return map;
         }
-    })
     });
 </script>
 </body>
