--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
                     alt-text="upper chaffee">
                 <p>Case felt the edge of the car’s floor. Images formed and reformed: a flickering montage of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the coffin for Armitage’s call.
 </p>
+                    <img src="././img/upperchaffee2.jpg" class="img-responsive img-thumbnail" alt="responsive image"
+                    alt-text="upper chaffee">
             </section>
 
             <section data-scene="westfork">
